--- a/surfit/acmlbooster/Makefile.in
+++ b/surfit/acmlbooster/Makefile.in
@@ -212,7 +212,7 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 AUTOMAKE_OPTIONS = foreign
-INCLUDES = $(TCLINCLUDE) $(SSTUFFINCLUDE) $(SURFITINCLUDE) $(ACMLINCLUDE)
+INCLUDES = $(TCLINCLUDE) $(SSTUFFINCLUDE) $(SSTUFFINCLUDE)/ptypes $(SURFITINCLUDE) $(ACMLINCLUDE)
 EXTRA_DIST = vc6/acmlbooster* src/interface/*.i make_release.bat \
 	make_debug.bat rpmmacros make_rpm_fc4 make_rpm_rh73 \
 	acmlbooster.spec.fc4 acmlbooster.spec.rh73 \
